2005-11-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/pushd.tcl (pushd): correct dirs arg [Bug 1156134] and
	clean up some other code.

2005-11-21  Jeff Hobbs  <jeffh@ActiveState.com>

	**** TCLX 8.4.0 RELEASE ****

	* generic/tclXstring.c (TclX_CrangeObjCmd): 64-bit cast fix

	* generic/tclXmath.c (TclX_MathInit): restrict to only add min/max
	expr funcs in <= 8.4

	* generic/tclXkeylist.c: 64-bit cast warning squash

	* library/tclx.tcl: protect scope of variables in init

2005-11-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: correct dist target

	* README:       updated readme and install notes to TclX 8.4 std.
	* unix/INSTALL: Windows nmake makefile still needs fixing, but
	* unix/INSTALL.generic (removed):    TEA-based system works across
	* win/INSTALL.txt, win/makefile.vc:  the board.
	* win/common.bc, win/makefile.bc, win/makefile.vc.sub (removed):

2005-11-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tclx.tcl: unused sample pure Tcl readdir

	* tests/cmdtrace.test (cmdtrace-3.2): remove errorInfo, as that
	varies between Tcl versions, but main error is correct.

	* tests/keylist.test:
	* generic/tclXkeylist.c (DeleteKeyedListEntry): keep hash entries
	in sync even if the deleted item was not in the hash.

	* generic/tclXlist.c (TclX_LemptyObjCmd): simplify to force list
	conversion, but ignore errors on bad lists.

	* tests/fmath.test (fmath-1.21): adjust for bignum math in 8.5

2005-10-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tclXunixPort.h: Correct INADDR_NONE define. [Bug 1242825]

	* configure, configure.in, tclconfig/tcl.m4: updated to 3.3,
	support for Solaris 5.10 and amd64 64-bit builds.

2005-07-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXselect.c: use unsigned int on Windows for fd type,
	as that is what Windows expects.  Not strictly correct, but select
	usage on Windows is iffy anyways.

2005-07-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclExtdInt.h (TclXOSGetSelectFnum): use int for fd